<resources>
    <string name="app_name">Simple Organiser</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="search_event">Search</string>
    <string name="type_some_text_for_search">Type some text for search</string>
    <string name="title_activity_new_item">NewItemActivity</string>
    <string name="title_activity_update_item">UpdateItemActivity</string>
    <string name="event_title">Event title</string>
    <string name="add_event">Add Event</string>
    <string name="update_event">Update event</string>
    <string name="choose_event_from_list">Choose event from list</string>
    <string name="dismiss">Dismiss</string>
</resources>