<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.UpdateItemActivity">

    <TextView
        android:id="@+id/message_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_event_from_list"
        android:layout_marginBottom="4dp"
        android:textSize="10pt"/>

    <Spinner
        android:id="@+id/action_bar_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_title"
        android:inputType="text" />

    <EditText
        android:id="@+id/event_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_some_text_for_search"
        android:inputType="text" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_event" />
</LinearLayout>