<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/add"
            tools:ignore="ButtonStyle"
            tools:layout_editor_absoluteX="131dp"
            tools:layout_editor_absoluteY="13dp" />

        <Button
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/update"
            tools:ignore="ButtonStyle"
            tools:layout_editor_absoluteX="131dp"
            tools:layout_editor_absoluteY="13dp" />

        <Button
            android:id="@+id/remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/remove"
            tools:ignore="ButtonStyle"
            tools:layout_editor_absoluteX="248dp"
            tools:layout_editor_absoluteY="13dp" />

        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:text="@string/search_event"
            tools:ignore="ButtonStyle"
            tools:layout_editor_absoluteX="248dp"
            tools:layout_editor_absoluteY="13dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_some_text_for_search"
        android:inputType="text" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="83dp" />

</LinearLayout>